# px4_offboard_lowlevel

./: CMakeLists.txt  LICENSE  README.md  package.xml  visualize.rviz
config/controller/: initial_gains_iris.yaml  initial_gains_x500.yaml
config/exp/: exp_params.yaml
config/policy/: x500_hover.yaml  x500_policy.yaml  x500_trigger.yaml
config/sitl/: sitl_params.yaml
config/uav_parameters/: ifex_param.yaml  iris_param.yaml  x500_exp_param.yaml  x500_param.yaml
include/px4_offboard_lowlevel/: controller.h  controller_node.h
instructions/: demo.md  explanation.md  package_setup.md  ros_px4_setup.md
instructions/media/: LowLevelOffboard.drawio
launch/: bag.launch.py  ifex_sitl.launch.py  iris_sitl.launch.py  visualize.launch.py  x500_exp.launch.py  x500_sitl.launch.py
msg/: Actions.msg  Observations.msg  Trigger.msg
policy/: controller.onnx  x500_hover.onnx  x500_ifex.onnx  x500_trigger.onnx
px4-resources/: dds_topics.yaml
scripts/: identification.py  px4_sitl_quadrotor_x.m  visualizer.py
src/: New_controller.cpp  UAV_quasi.m  controller.cpp  controller_node.cpp  gains.m  main_quasi.m  visuals.cpp
src/TrajectoryPublishers/: circle_trajectory_node.cpp
visuals/plotjuggler/: position_tracking.xml  position_tracking_act_cmds.xml  position_tracking_thrust_torq_cmds.xml
